2006-11-19  Daniel Nylander <po@danielnylander.se>

	* sv.po: Updated Swedish translation.

2006-11-18  Djihed Afifi <djihed@gmail.com> 

	* ar.po: Added Arabic Translation.
	* LINGUAS: Added ar.

2006-11-17  Adam Schreiber <sadam@clemson.edu>
    * POTFILES.in: 
    Added plugins/epiphany/seahorse-extension.c,
    plugins/epiphany/seahorse.ephy-extension.in.in

2006-11-17  Gabor Kelemen  <kelemeng@gnome.hu>

	* hu.po: Translation updated.

2006-11-14  Daniel Nylander <po@danielnylander.se>

	* sv.po: Updated Swedish translation.

2006-10-28  Ilkka Tuohela  <hile@iki.fi>

	* fi.po: Updated Finnish translation.

2006-10-27  Ilkka Tuohela  <hile@iki.fi>

	* fi.po: Updated Finnish translation.

2006-10-27  Ilkka Tuohela  <hile@iki.fi>

	* fi.po: Updated Finnish translation.

2006-10-26  Ilkka Tuohela  <hile@iki.fi>

	* fi.po: Updated Finnish translation.

2006-10-09  Alessio Frusciante  <algol@firenze.linux.it>

	* it.po: Updated Italian translation by
	Milo Casagrande <milo_casagrande@yahoo.it>.

2006-09-16  Nate Nielsen  <nielsen@memberwebs.com>

    * POTFILES.in: Added src/seahorse-gkeyring-*.c, 
    src/seahorse-gkeyring-item-properties.glade
    
2006-09-15  Ilkka Tuohela  <hile@iki.fi>

	* fi.po: Updated Finnish translation.

2006-09-09  Nate Nielsen  <nielsen@memberwebs.com>

    * POTFILES.in: Removed src/seahorse-preferences.*
    
2006-09-04  Nate Nielsen  <nielsen@memberwebs.com>

    * POTFILES.in: Removed libseahorse/seahorse-key-store.c
    
2006-09-04  Josep Puigdemont i Casamajó  <josep.puigdemont@gmail.com>

	* ca.po: Updated Catalan translation rebased from seahorse-0-8.

2006-08-24  Nate Nielsen  <nielsen@memberwebs.com>

	* POTFILES.in: Removed bonobo/Seahorse_PGP_File_Listener.server.in.in

2006-08-22  Artur Flinta  <aflinta@cvs.gnome.org>

	* pl.po: Updated Polish translation by GNOME PL Team.

2006-08-18  Nate Nielsen  <nielsen@memberwebs.com>

    * POTFILES.in: Added src/seahorse-pgp-generate.*