@@ -14,12 +14,15 @@ daemon/seahorse-service-keyset.c
 daemon/seahorse-sharing.c
 data/seahorse.schemas.in
 libcryptui/cryptui-key-chooser.c
+libcryptui/cryptui-key-list.c
 libseahorse/eggtrayicon.c
 libseahorse/seahorse-add-keyserver.glade
 libseahorse/seahorse-context.c
 libseahorse/seahorse-gpg-options.c
 libseahorse/seahorse-hkp-source.c
 libseahorse/seahorse-ldap-source.c
+libseahorse/seahorse-notification.c
+libseahorse/seahorse-notify.glade
 libseahorse/seahorse-passphrase.c
 libseahorse/seahorse-pgp-key.c
 libseahorse/seahorse-pgp-key-op.c
@@ -37,6 +40,7 @@ libseahorse/seahorse-ssh-key.c
 libseahorse/seahorse-ssh-operation.c
 libseahorse/seahorse-ssh-source.c
 libseahorse/seahorse-unknown-key.c
+libseahorse/seahorse-unknown-source.c
 libseahorse/seahorse-util.c
 libseahorse/seahorse-validity.c
 libseahorse/seahorse-widget.c
@@ -45,6 +49,7 @@ plugins/applet/GNOME_SeahorseApplet.xml
 plugins/applet/seahorse-applet.c
 plugins/applet/seahorse-applet-preferences.glade
 plugins/epiphany/seahorse.ephy-extension.in.in
+plugins/epiphany/seahorse-extension.c
 plugins/epiphany/seahorse-extension.c
 plugins/gedit/seahorse-gedit.c
 plugins/gedit/seahorse-gedit-plugin.c
@@ -67,9 +72,9 @@ src/seahorse-expires.c
 src/seahorse-expires.glade
 src/seahorse-generate-select.c
 src/seahorse-generate-select.glade
+src/seahorse-gkeyring-item.c
 src/seahorse-gkeyring-item-properties.c
 src/seahorse-gkeyring-item-properties.glade
-src/seahorse-gkeyring-item.c
 src/seahorse-gkeyring-operation.c
 src/seahorse-gkeyring-source.c
 src/seahorse-key-manager.c
@@ -101,8 +106,3 @@ src/seahorse-ssh-key-properties.c
 src/seahorse-ssh-key-properties.glade
 src/seahorse-ssh-upload.c
 src/seahorse-ssh-upload.glade
-libcryptui/cryptui-key-list.c
-libseahorse/seahorse-notification.c
-libseahorse/seahorse-notify.glade
-libseahorse/seahorse-unknown-source.c
-plugins/epiphany/seahorse-extension.c
