@@ -1,6 +1,11 @@
 2006-11-19  Daniel Nylander <po@danielnylander.se>
 
 	* sv.po: Updated Swedish translation.
+	* POTFILES.in:
+	Added libcryptui/cryptui-key-list.c
+	libseahorse/seahorse-notification.c
+	libseahorse/seahorse-notify.glade
+	libseahorse/seahorse-unknown-source.c
 
 2006-11-18  Djihed Afifi <djihed@gmail.com> 
 
